--- a/MC2-KisahKata/Base.lproj/LaunchScreen.storyboard
+++ b/MC2-KisahKata/Base.lproj/LaunchScreen.storyboard
@@ -16,16 +16,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="6yL-mZ-hHx">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundLaunchscreenFull" translatesAutoresizingMaskIntoConstraints="NO" id="6yL-mZ-hHx">
                                 <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6yL-mZ-hHx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5m3-o6-5CN"/>
+                            <constraint firstItem="6yL-mZ-hHx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="DfD-Ne-na8"/>
+                            <constraint firstAttribute="bottom" secondItem="6yL-mZ-hHx" secondAttribute="bottom" id="Kc7-eB-8WB"/>
                             <constraint firstItem="6yL-mZ-hHx" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="Kwt-AQ-c8R"/>
                             <constraint firstItem="6yL-mZ-hHx" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="WYS-B2-IEv"/>
                             <constraint firstItem="6yL-mZ-hHx" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Xmf-ap-PY1"/>
+                            <constraint firstItem="6yL-mZ-hHx" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="bwR-oQ-nGr"/>
                             <constraint firstAttribute="bottom" secondItem="6yL-mZ-hHx" secondAttribute="bottom" id="loV-Nq-z5M"/>
                         </constraints>
                     </view>
@@ -36,7 +40,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen" width="375" height="812"/>
+        <image name="backgroundLaunchscreenFull" width="1500" height="3248"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
