--- a/MC2-KisahKata/Cell/TemaTableViewCell.xib
+++ b/MC2-KisahKata/Cell/TemaTableViewCell.xib
@@ -10,13 +10,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="temaCell" id="KGk-i7-Jjw" customClass="TemaTableViewCell" customModule="MC2_KisahKata" customModuleProvider="target">
+        <tableViewCell contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" reuseIdentifier="temaCell" id="KGk-i7-Jjw" customClass="TemaTableViewCell" customModule="MC2_KisahKata" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="329" height="389"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="329" height="389"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VXE-QQ-6tb">
+                        <rect key="frame" x="0.0" y="0.0" width="329" height="389"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3JV-Yg-O0p">
                         <rect key="frame" x="29" y="50" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -36,7 +40,7 @@
                             <constraint firstAttribute="width" constant="139" id="TLV-EJ-xf8"/>
                         </constraints>
                     </imageView>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.90000000000000002" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-hy-Xyp">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Vz7-hy-Xyp">
                         <rect key="frame" x="0.0" y="134" width="329" height="244"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lzw-XU-EA3">
@@ -47,8 +51,10 @@
                         </collectionViewFlowLayout>
                     </collectionView>
                 </subviews>
+                <color key="backgroundColor" red="0.092017911369999997" green="0.22721213100000001" blue="0.43924069399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstItem="dXp-N3-05x" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="9" id="3VE-2n-QWH"/>
+                    <constraint firstItem="VXE-QQ-6tb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="8Pv-gq-Ayg"/>
                     <constraint firstAttribute="trailing" secondItem="Vz7-hy-Xyp" secondAttribute="trailing" id="8n5-T7-eLO"/>
                     <constraint firstItem="jaq-qN-MWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="9cS-iN-vae"/>
                     <constraint firstItem="Vz7-hy-Xyp" firstAttribute="top" secondItem="dXp-N3-05x" secondAttribute="bottom" constant="38" id="Aw1-y8-6qK"/>
@@ -56,13 +62,17 @@
                     <constraint firstItem="jaq-qN-MWZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Oo0-bT-dkc"/>
                     <constraint firstItem="dXp-N3-05x" firstAttribute="top" secondItem="3JV-Yg-O0p" secondAttribute="bottom" constant="4" id="P6f-BY-IIh"/>
                     <constraint firstAttribute="trailing" secondItem="jaq-qN-MWZ" secondAttribute="trailing" constant="-22" id="Uy0-vo-cM6"/>
+                    <constraint firstItem="VXE-QQ-6tb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="YNf-rJ-naE"/>
+                    <constraint firstAttribute="trailing" secondItem="VXE-QQ-6tb" secondAttribute="trailing" id="dCs-I4-Kta"/>
                     <constraint firstItem="3JV-Yg-O0p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="50" id="egU-c0-uKQ"/>
                     <constraint firstItem="Vz7-hy-Xyp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="gxM-B6-55c"/>
                     <constraint firstAttribute="trailing" secondItem="jaq-qN-MWZ" secondAttribute="trailing" constant="-22" id="h0g-dQ-bYm"/>
                     <constraint firstItem="Vz7-hy-Xyp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="rvF-jH-hGA"/>
+                    <constraint firstAttribute="bottom" secondItem="VXE-QQ-6tb" secondAttribute="bottom" id="yS6-0Z-bkZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" red="0.092017911369999997" green="0.22721213100000001" blue="0.43924069399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <connections>
                 <outlet property="CollectionView" destination="H2p-sc-9uM" id="ByP-CZ-9Q7"/>
                 <outlet property="judulCollectionView" destination="Vz7-hy-Xyp" id="FIV-iK-NW9"/>
